# cat-logic

./: .gitignore  .tmuxinator.yml  157-b55b7933e73550ee2a7c.js  157-b55b7933e73550ee2a7c.js.map  240-ec32e15dbc6fd86e1bcf.js  240-ec32e15dbc6fd86e1bcf.js.map  258-330a552e034236f6601c.js  258-330a552e034236f6601c.js.map  259-d825e6d8e4bef256d032.js  259-d825e6d8e4bef256d032.js.map  281-322b943177f6259c7ced.js  281-322b943177f6259c7ced.js.map  303-986695f3d2648b7490f3.js  303-986695f3d2648b7490f3.js.map  361-b647986da2c5192e08f7.js  361-b647986da2c5192e08f7.js.map  382-82d600e1984cbed7cede.js  382-82d600e1984cbed7cede.js.map  404.html  446-d533435f1c7d9f7a9f6d.js  446-d533435f1c7d9f7a9f6d.js.map  449-b90073635521096915bd.js  449-b90073635521096915bd.js.map  497-506ab556c5d8f3840ee2.js  497-506ab556c5d8f3840ee2.js.map  513-6ee7dd98bd1407a063b8.js  513-6ee7dd98bd1407a063b8.js.map  531-09f61112cdf717aecc8b.js  531-09f61112cdf717aecc8b.js.map  576-5b510f2e1191109a8231.js  576-5b510f2e1191109a8231.js.map  631-0abb129a00d9d8ba58cc.js  631-0abb129a00d9d8ba58cc.js.map  649-715762d0b0b90ec66408.js  649-715762d0b0b90ec66408.js.map  650-a2de5a10cdd35ec68f00.js  650-a2de5a10cdd35ec68f00.js.map  665-74e468f3ede348783460.js  665-74e468f3ede348783460.js.map  695-9ae0acba1419936fbb5a.js  (+1064 more)
embeddings/: .gitignore  Dockerfile  README.md  embeddings_20231105.csv  pyproject.toml  renew-similarity.sh  similarity-result.json
embeddings/src/: app.py  cosine_similarity.py  get_embeddings.py
embeddings/tests/: test_get_embeddings.py
embeddings/tests/test-docs/: javascript.md  python.md
(+1351 files in other folders)
