[project]
name = "embeddings"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "openai>=1.59.7",
    "pandas>=2.2.3",
    "phidata>=2.7.7",
    "streamlit>=1.53.0",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
    "pytest>=9.0.2",
]
